--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 	padding: 0;
 	background-color: var(--background-color);
 	color: var(--text-color);
-	font-family: fantasy;
+	/* font-family: fantasy; */
 	letter-spacing: 1px;
 }
 
