--- a/style.css
+++ b/style.css
@@ -5,26 +5,28 @@
   }
 }
 
-html {
-	height: 100%;
+
+
+* {
 	margin: 0;
 	padding: 0;
+	letter-spacing: 1px;
+}
+
+html {
+	height: 100%;
 	background-color: var(--background-color);
 	color: var(--text-color);
-	/* font-family: fantasy; */
-	letter-spacing: 1px;
 }
 
 /*NAV BAR */
 nav {
-	top:0;
-	background-color: rgba(0, 0, 0, 0.9);
-	padding-top: 10px;
-	padding-bottom: 10px;
+	top: 0;
+	margin-top: 5px;
+	padding: 5px 0;
 	text-align: right;
-	border-color: var(--text-color) black;
-	border-style: solid;
-    border-width: 1px;
+	border-top: 1px solid var(--text-color);
+	border-bottom: 1px solid var(--text-color);
 }
 
 .nav-home a {
@@ -45,49 +47,47 @@ nav.nav-home a:hover {
 
 /* BODY */
 
-
-.flex1 {
+/* INTRO */
+.container_intro {
 	display: flex;
 	flex-wrap: wrap;
-	background-color: black;
+	padding-top: 40px;
 	padding-bottom: 120px;
-	width: 90%;
+	width: 80%;
 	margin: auto;
+	margin-bottom: 50px;
+	border-bottom: 1px solid white;
 }
 
-div.intro {
-	width: 40%;
+/* TEXT */
+.intro {
 	margin: auto;
-	min-width: 400px;
+	width: 600px;
 }
 
-div.intro p {
+.intro p {
 	margin: 0.5em 0em;
 	font-size: 1.5em;
 }
 
-div.intro h1{
+.intro h1{
 	color:white;
-	padding: 0;
-	margin:0;
-	margin-left: 10px;
+	margin-left: 20px;
 	font-size: 3.5em;
 }
 
 /* LAPTOP */
 .container_lap {
-	width: 40%;
+	width: 800px;
 	margin: auto;
 	position: relative;
-	min-width: 800px;
 }
 
 .laptop_container {
 	width: 70%;
 	height: 70%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 100px;
+	margin: auto;
+	padding-top: 100px;
 }
 
 .laptop {
@@ -104,50 +104,29 @@ div.intro h1{
 }
 
 
+
+
+
 /* PREVIOUS WORK */
-.container_proj {
-	border: 5px inset black;
-	background-color: var(--text-color);
-	color: black;
-	width: 80%;
+.container_work {
+	width: 75%;
 	padding: 0 80px;
     margin-right: auto;
     margin-left: auto;
 	display: flex;
     flex-wrap: wrap;
-	padding-bottom: 100px;
+	padding-bottom: 50px;
 }
 
-.container_proj h2 {
-	margin-top: 50px;
-	margin-bottom: 20px;
+.container_work h2 {
+	margin-bottom: 40px;
 	flex-basis: 100%;
 	font-size: 2.5em;
 }
 
-.projects {
-	margin-left: auto;
-	margin-right: auto;
-	width: 600px;
-	margin-top: 50px;
-	background-color: black;
-}
-
-.projects h3 {
-	font-size: 2em;
-	text-align: center;
-	color: var(--text-color);
-	padding:15px 0;
-	margin:auto;
-}
-
-.proj_img {
-	width: 100%;
-}
-
-
-
-.proj_desc {
+/* My Work Containers */
+/* TEXT */
+.work_text {
 	width: 40%;
 	margin: 50px;
 	margin-left: auto;
@@ -156,14 +135,41 @@ div.intro h1{
 	text-align:left;
 }
 
-.proj_desc h3 {
+.work_text h3 {
 	font-size: 1.8em;
+	margin: auto;
+	margin-bottom: 40px;
+	margin-top: 80px;
 }
 
-.proj_desc p {
+.work_text p {
 	padding-left: 1em;
 	font-size: 1.4em;
 }
+
+.work_img {
+	margin-left: auto;
+	margin-right: auto;
+	width: 600px;
+	margin-top: 50px;
+	padding-bottom: 20px;
+	margin-bottom: 50px;
+	background-color: black;
+}
+
+.work_img img {
+	width: 100%;
+	border: 2px solid white;
+}
+
+.divider_line {
+	width: 100%;
+	height: 20px ;
+	border-top: 1px solid white;
+}
+
+
+
 
 
 
@@ -180,6 +186,8 @@ footer {
 	border-style: solid;
     border-width: 1px;
 	font-size: 1.2em;
+	padding: 5px;
+	margin-bottom: 10px;
 }
 footer p {
 	width: 50%;
@@ -196,4 +204,16 @@ footer p a {
 
 footer p a:hover {
 	color: white;
+}
+
+
+
+@media only screen and (max-width: 1000px) {
+	.intro {
+		text-align: center;
+	}
+	
+	.container_work h2 {
+		text-align: center;
+	}
 }
