--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ nav.nav-home a:hover {
 .divider_line {
 	width: 100%;
 	height: 20px ;
-	border-top: 1px solid white;
+	border-top: 1px solid var(--text-color);
 }
 
 
